HBW-33 fix vertical align (#10)

--- a/hbw/app/assets/stylesheets/hbw.sass
+++ b/hbw/app/assets/stylesheets/hbw.sass
@@ -34,6 +34,15 @@
     border-right: 1px solid #ddd
     padding: 10px
 
+  .form-group
+    display: table
+    width: 100%
+    height: 5.5em
+
+  .hbw-checkbox-label
+    display: table-cell
+    vertical-align: middle
+
   .field_with_errors
     @extend .has-error
     .form-control
